--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -26,8 +26,7 @@
         .card.mb-2
           h5.card-header.p-2(class=(loginChoice.userPass ? 'alert-success' : 'bg-light'))
             a.inherit-color(href='#userPass', data-toggle='collapse') #{t('authentication.user_pass')}:
-          #userPass.collapse(class=(loginChoice.userPass ? 'show' : ''))
-            div(style='margin-top: 10px;')
+          #userPass.mt-2.collapse(class=(loginChoice.userPass ? 'show' : ''))
             ul.nav.nav-tabs
               li.nav-item: a.nav-link.active(data-toggle='tab', href='#sign-in-contents') #{t('authentication.sign_in')}
               li.nav-item: a.nav-link(data-toggle='tab', href='#sign-up-contents') #{t('authentication.sign_up')}
