--- a/softwerkskammer/lib/site/views/loginDialog.pug
+++ b/softwerkskammer/lib/site/views/loginDialog.pug
@@ -34,7 +34,7 @@
 
             .tab-content
               #sign-in-contents.tab-pane.fade.show.active
-                form(action='/auth/login?returnTo=' + encodeURIComponent(returnUrl), method='post')
+                form#passwordform-sign-in(action='/auth/login?returnTo=' + encodeURIComponent(returnUrl), method='post')
                   input(type='hidden', name='_csrf', value=csrf_token)
                   p #{t('authentication.sign_in_text')}
                   .row
@@ -51,7 +51,7 @@
                         button.btn.btn-primary(type='submit') #{t('authentication.sign_in_button')}
 
               #sign-up-contents.tab-pane.fade
-                form(action='/auth/signup?returnTo=' + encodeURIComponent(returnUrl), method='post')
+                form#passwordform-sign-up(action='/auth/signup?returnTo=' + encodeURIComponent(returnUrl), method='post')
                   input(type='hidden', name='_csrf', value=csrf_token)
                   p #{t('authentication.sign_up_text')}
                   .row
@@ -97,8 +97,8 @@
                 button.btn.btn-light(type='submit') #{t('authentication.magic_link_request')}
 
 script.
-  $(document).ready(function () {
-    user_validator = $('#passwordform').validate({
+  function createValidator(formId) {
+    var validator = $(formId).validate({
       rules: {
         email: {required: true, email: true},
         password: {
@@ -113,19 +113,21 @@ script.
       unhighlight: function (element) { $(element).removeClass('is-invalid'); }
     });
 
-    user_validator.form();
-
     function handler(each) {
       return function () {
-        user_validator.element(each);
+        validator.element(each);
       };
     }
 
-    ['#passwordform [name=email]', '#passwordform [name=password]'].forEach(
+    [formId + ' [name=email]', formId + ' [name=password]'].forEach(
       function (each) {
         $(each).change(handler(each));
         $(each).keyup(handler(each));
       }
     );
-    user_validator.form();
+    validator.form();
+  }
+  $(document).ready(function () {
+    createValidator('#passwordform-sign-in');
+    createValidator('#passwordform-sign-up');
   });
