--- a/softwerkskammer/views/imageUpload.pug
+++ b/softwerkskammer/views/imageUpload.pug
@@ -37,3 +37,14 @@ mixin imageScripts
       $('#previewContainer').hide();
       $('#uploadButtons').hide();
     });
+
+mixin imageUpload
+  #selectFileButton
+    +selectFileButton('general.photo')
+  #uploadButtons
+    +uploadButtons(['float-right'])
+  .clearfix
+  #previewContainer
+    div
+      .mt-5
+        img#preview(style='max-width: 100%;')
