--- a/softwerkskammer/lib/members/views/memberlist-mixin.pug
+++ b/softwerkskammer/lib/members/views/memberlist-mixin.pug
@@ -1,13 +1,13 @@
 mixin memberlistHeading(firstPart, count)
   | #{firstPart}#{t('general.members_interval', { postProcess: 'interval', count: count })}.
-  
+
 mixin memberlist(members, organizers)
   if (accessrights.isRegistered())
     dl.row
       for member in members
         dt.col-4: .member
           +linkedMember(member.nickname())
-        dd.col-8.mb-0 
+        dd.col-8.mb-0
           if (member.hasImage())
             a(href='#', rel='tooltip', data-content=member.nickname(), title='<div style="height: 128px;"><img src=' + member.avatarUrl(128) + ' width="128" height="128"/></div>')
               img.d-print-none(src=member.inlineAvatar(), width='16', height='16')
@@ -28,15 +28,15 @@ mixin linkedMember(nickname)
 
 mixin tagCloud()
   #tag-cloud
-    
+
 mixin tagCloudScript(members, startcolor)
   script(src='/clientscripts/jqcloud.min.js')
   script(src='/clientscripts/tinycolor-min.js')
-  script(src='/clientscripts/tinygradient.min.js')
+  script(src='/clientscripts/browser.js')
   script.
     $(document).ready(function() {
       $('#tag-cloud').jQCloud(
-        !{JSON.stringify(tagclouddata(members))}, 
+        !{JSON.stringify(tagclouddata(members))},
       {
         afterCloudRender: interestify,
         shape: 'rectangular',
@@ -44,8 +44,8 @@ mixin tagCloudScript(members, startcolor)
         autoResize: true,
         removeOverflowing: false,
         fontSize: function(width, height, weight) {
-          var 
-            max = Math.min(width * 0.1, 60), 
+          var
+            max = Math.min(width * 0.1, 60),
             min = Math.min(width * 0.02, 10);
           return Math.round(min + (max - min) * 1.0 / (this.options.steps-1) * (weight - 1)) + 'px';
         },
