"contact the organizers" now in i18n

--- a/softwerkskammer/lib/groups/views/get.pug
+++ b/softwerkskammer/lib/groups/views/get.pug
@@ -36,7 +36,7 @@ block content
         if (userIsGroupMember && group.contactTheOrganizers)
           p
             a(href='/mailsender/contactGroupContactPersons/' + group.id)
-              | Ansprechpartner kontaktieren
+              | #{t('groups.contact_the_organizers')}
   .row
     .col-lg-6
       | !{group.descriptionHTML()}
