--- a/softwerkskammer/lib/groups/views/get.pug
+++ b/softwerkskammer/lib/groups/views/get.pug
@@ -32,7 +32,7 @@ block content
       if (group.contactTheOrganizers && accessrights.canParticipateInGroup(group))
         p
           a.btn.btn-success(href='/mailsender/contactGroupContactPersons/' + group.id)
-            | #{t('groups.mail_the_organizers')}
+            | #{t('groups.mail_the_contact_persons')}
       p
         strong #{t('groups.mailinglist')}: #{' '}
         a(href='mailto:' + group.id + '@softwerkskammer.org')
