--- a/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
+++ b/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
@@ -16,7 +16,7 @@ mixin mailform(message, regionalgroups, themegroups, massMailing, contactPersons
             h4 #{t('mailsender.others')}
             +checkbox('toParticipants', t('mailsender.to_participants'), false, 'toParticipants')
           if (contactPersons)
-            +text('contactPersonsGroupName', t('mailsender.to_contact_persons'), contactPersons.groupName, '', '', true)
+            +text('groupNameForContact', t('mailsender.to_contact_persons'), contactPersons.groupName, '', '', true)
           if (message.receiver)
             +text('nickname', t('mailsender.to_member'), message.receiver.nickname(), '', '', true)
           +text('subject', t('mailsender.subject'), message.subject)
