--- a/softwerkskammer/lib/site/views/index.pug
+++ b/softwerkskammer/lib/site/views/index.pug
@@ -4,23 +4,23 @@ include ../../groups/views/group-mixins
 
 block title
   | #{t('general.welcome')}
-  
+
 block head
   +addMapStyle
-  
+
 block content
   .row
     .col-12
       .page-header
         h1 Softwerkskammer <br>
           small #{t('general.communities')}
-  //.row
-  //  .col-md-12
-  //    h2 Aktuell: Der Global Day of Coderetreat am 17. November 2018
-  //    p
-  //      | Hier findest Du&nbsp;
-  //      a(href='activities/gdcr') die meisten der Veranstaltungen im Softwerkskammer-Einzugsgebiet.
-  //    hr
+  .row
+    .col-md-12
+      h2 Aktuell: Der Global Day of Coderetreat am 16. November 2019
+      p
+        | Hier findest Du&nbsp;
+        a(href='activities/gdcr') die meisten der Veranstaltungen im Softwerkskammer-Einzugsgebiet.
+      hr
   .row
     .col-lg-6
       !=t('general.about_us_text', { postProcess: 'pug' })
