--- a/softwerkskammer/views/layout.pug
+++ b/softwerkskammer/views/layout.pug
@@ -17,3 +17,8 @@ block specific
           br
           small.text-muted.
             #{t('general.events_in_europe_desc')}
+        h4
+          a(href='/wiki/events/2020') #{t('general.events_in_europe')} 2020
+          br
+          small.text-muted.
+            #{t('general.events_in_europe_desc')}
