adapting README.md and credits.pug for new Mocha Testing way

--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -100,7 +100,8 @@ block content
         +defItem('Puglint (grunt)', 'https://github.com/mrmlnc/grunt-puglint', 'Grunt Integration für pug-lint')
         +defItem('Grunt Sass', 'https://github.com/gruntjs/grunt-contrib-sass', 'Grunt Integration für SASS Compilierung')
         +defItem('Grunt Uglify', 'https://github.com/gruntjs/grunt-contrib-uglify', 'Grunt Minifizierung für JS-Files')
-        +defItem('Grunt Mocha Istanbul', 'https://github.com/pocesar/grunt-mocha-istanbul', 'Mocha Tests im Grunt + Coverage')
+        +defItem('Grunt Mocha CLI', 'https://github.com/Rowno/grunt-mocha-cli', 'Mocha Tests im Grunt')
+        +defItem('grunt-simple-nyc', 'https://github.com/tandrewnichols/grunt-simple-nyc', 'Coverage check with mocha')
         +defItem('Must', 'https://github.com/moll/js-must', 'BDD TDD Assertion Library')
         +defItem('Sinon', 'http://sinonjs.org', 'Mock Framework')
         +defItem('Request', 'http://github.com/mikeal/request.git', 'Für Integrationstests')
