--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -65,7 +65,7 @@ block content
         +defItem('Colorpicker for Bootstrap', 'https://github.com/mjolnic/bootstrap-colorpicker/', 'Farben auswählen im Bootstrap Stil')
         +defItem('Tiny Color', 'https://github.com/bgrins/TinyColor', 'Arbeiten mit Farben')
         +defItem('Tiny Gradient', 'https://github.com/mistic100/tinygradient', 'Gradienten - basierend auf Tiny Color')
-        +defItem('Full Calendar', 'http://arshaw.com/fullcalendar/', 'Der Kalender')
+        +defItem('Full Calendar', 'https://fullcalendar.io/', 'Der Kalender')
         +defItem('Bootstrap-Datepicker', 'https://github.com/eternicode/bootstrap-datepicker', 'Datumseingabe')
         +defItem('Simple-Timepicker', 'https://github.com/leider/simple-timepicker', 'Zeiteingabe')
         +defItem('Datatables', 'http://www.datatables.net/', 'Für Administration')
