small tweaks for fullcalendar and i18next

--- a/softwerkskammer/frontend/sass/agora.scss
+++ b/softwerkskammer/frontend/sass/agora.scss
@@ -78,7 +78,7 @@ h6 > small {
 }
 
 // fullcalendar *BEGIN*
-.fc-event-main {
+.fc-event-title {
   white-space: normal !important;
   max-height: 30px;
 }
