replace imagemagick by sharp (step 2 - finished)

--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -80,8 +80,8 @@ block content
         +defItem('Marked', 'https://github.com/chjj/marked', 'Markdown nach HTML')
         +defItem('Syntaxhighlighter', 'https://github.com/thlorenz/node-syntaxhighlighter', 'Syntax Highlighting in markdown')
         +defItem('iconv-lite', 'https://github.com/ashtuchkin/iconv-lite', 'Text Recoding')
-        +defItem('node-imagemagick', 'https://github.com/rsms/node-imagemagick', 'Ein Wrapper für die imagemagick Werkzeuge')
-        +defItem('Image Magick', 'http://imagemagick.org/', 'Erzeugen, bearbeiten, kombinieren, konvertieren von Bitmaps')
+        +defItem('Sharp', 'https://sharp.pixelplumbing.com/', 'Bearbeiten von Bildern')
+        +defItem('exifr', 'https://github.com/MikeKovarik/exifr', 'Extrahieren von Exif Informationen')
         +defItem('i18next', 'http://i18next.com/', 'Internationalisierung')
         +defItem('feed', 'https://github.com/jpmonette/feed', 'Erzeugung von Atom/RSS-Feeds')
 
