--- a/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
+++ b/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
@@ -1,6 +1,6 @@
 include  ../../../views/formComponents
 
-mixin mailform(message, regionalgroups, themegroups, massMailing, contactPersons)
+mixin mailform(message, regionalgroups, themegroups, massMailing, contactPersons, groupdName, emailPrefix)
   form#mailform(action='/mailsender/send', method='post')
     +csrf
     fieldset
@@ -17,6 +17,9 @@ mixin mailform(message, regionalgroups, themegroups, massMailing, contactPersons
             +checkbox('toParticipants', t('mailsender.to_participants'), false, 'toParticipants')
           if (contactPersons)
             +text('groupNameForContact', t('mailsender.to_contact_persons'), contactPersons.groupName, '', '', true)
+          if (groupdName)
+            +text('groupName', t('mailsender.to_group'), groupName, '', '', true)
+            +hidden('emailPrefix', emailPrefix)
           if (message.receiver)
             +text('nickname', t('mailsender.to_member'), message.receiver.nickname(), '', '', true)
           +text('subject', t('mailsender.subject'), message.subject)
