Add mail footer to thank DeltaTree

--- a/softwerkskammer/lib/mailsender/views/mailtemplate-textonly.pug
+++ b/softwerkskammer/lib/mailsender/views/mailtemplate-textonly.pug
@@ -1,5 +1,7 @@
 | #{plain}
 each button in buttons
   | #{button.url} (#{button.text})
-  | 
-    
+  |
+|
+| -- #{$n}
+| Versendet über die E-Mail-Infratruktur des Hosters DeltaTree (https://deltatree.de/)
