--- a/softwerkskammer/frontend/sass/agora.scss
+++ b/softwerkskammer/frontend/sass/agora.scss
@@ -1,7 +1,6 @@
 @import "variables";
 @import "../../../../node_modules/bootstrap/scss/bootstrap";
-@import "../../../../node_modules/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.scss";
-@import "../../../../node_modules/select2-theme-bootstrap4/src/select2-bootstrap.scss";
+@import "../../../../node_modules/select2-bootstrap-5-theme/src/include-all";
 @import "bootstrap-markdown-patched";
 
 // adapt syntaxhighlighted code in textboxes to bootstrap *BEGIN*
@@ -254,10 +253,6 @@ a {
     direction: ltr;
     cursor: pointer;
   }
-}
-
-.photo-day > .photo-room:nth-child(odd) {
-  background-color: $table-accent-bg;
 }
 
 .select2-container--bootstrap {
