--- a/softwerkskammer/frontend/sass/variables.scss
+++ b/softwerkskammer/frontend/sass/variables.scss
@@ -1,10 +1,7 @@
 // we are overriding the following values from the original bootstrap variables.scss
 
-$theme-colors: (
-        "primary": #337ab7,
-        "warning": #EBB847
-);
-
+$primary: #337ab7;
+$warning: #EBB847;
 $font-family-sans-serif: "Source Sans Pro", Helvetica, Arial, sans-serif;
 $font-family-monospace: "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace;
 $font-family-icon: "Font Awesome 5 Free";
