--- a/softwerkskammer/lib/site/views/credits.pug
+++ b/softwerkskammer/lib/site/views/credits.pug
@@ -71,7 +71,7 @@ block content
         +defItem('Datatables Plugins', 'http://datatables.net/plug-ins/', 'Bootstrap / FontAwesome /Internationalization Integration')
         +defItem('jquery-guillotine', 'http://matiasgagliano.github.io/guillotine/', 'sizing, rotating, cropping of images inside the browser')
         +defItem('select2', 'http://ivaynberg.github.io/select2/', 'Tag Darstellung in Inputboxen')
-        +defItem('select2-theme-bootstrap4', 'http://fk.github.io/select2-bootstrap-css/', 'Bootstrap Integration für Select2')
+        +defItem('select2-bootstrap-5-theme', 'https://github.com/apalfrey/select2-bootstrap-5-theme/', 'Bootstrap Integration für Select2')
         +defItem('smartmenus', 'https://github.com/drmonty/smartmenus', 'Hierarchische Menus / Dropdowns (http://www.smartmenus.org/)')
 
       h4 Backend Rendering
