Update footer text and formatting

--- a/softwerkskammer/lib/mailsender/views/mailtemplate-textonly.pug
+++ b/softwerkskammer/lib/mailsender/views/mailtemplate-textonly.pug
@@ -3,5 +3,8 @@ each button in buttons
   | #{button.url} (#{button.text})
   |
 |
+|
+|
+|
 | -- #{$n}
-| Versendet über die E-Mail-Infratruktur des Hosters DeltaTree (https://deltatree.de/)
+| Die Softwerkskammer versendet ihre E-Mails mit freundlicher Unterstützung von DeltaTree (https://deltatree.de/).
