--- a/softwerkskammer/lib/mailsender/views/mailtemplate.pug
+++ b/softwerkskammer/lib/mailsender/views/mailtemplate.pug
@@ -52,6 +52,9 @@ html
     each button in buttons
       a.btn(href=button.url) #{button.text}
 
-    p -- #{$n}
+    br
+    br
+    br
+    hr
     p.
-     Versendet über die E-Mail-Infratruktur des Hosters #[a(href='https://deltatree.de/') DeltaTree]
+      Die Softwerkskammer versendet ihre E-Mails mit freundlicher Unterstützung von #[a(href='https://deltatree.de/') DeltaTree].
