Update imprint to Christoph Häfner

--- a/softwerkskammer/lib/site/views/impressum.pug
+++ b/softwerkskammer/lib/site/views/impressum.pug
@@ -8,15 +8,13 @@ block content
       h3 Impressum
       p Angaben gemäß § 5 TMG:
       address.
-        Nicole Rauch <br/>
-        Ludwigstr. 5 <br/>
-        75045 Walzbachtal
+        Christoph Häfner<br/>
+        Hauptstr. 140<br/>
+        69226 Nußloch
       h4 Kontakt:
       address
-        strong Telefon:
-        |  07203 / 34 65 97 <br/>
         strong E-Mail:
-        |  nicole.m@gmx.de
+        |  swk-impressum@christophhaefner.de
       p Quelle: 
         em Mit dem von 
           a(rel='nofollow', href='http://www.e-recht24.de') eRecht24
