Add config option for including mail footer

--- a/softwerkskammer/lib/mailsender/views/mailtemplate-textonly.pug
+++ b/softwerkskammer/lib/mailsender/views/mailtemplate-textonly.pug
@@ -2,9 +2,9 @@
 each button in buttons
   | #{button.url} (#{button.text})
   |
-|
-|
-|
-|
-| -- #{$n}
-| Die Softwerkskammer versendet ihre E-Mails mit freundlicher Unterstützung von DeltaTree (https://deltatree.de/).
+if includeFooter
+  |
+  |
+  |
+  | -- #{$n}
+  | Die Softwerkskammer versendet ihre E-Mails mit freundlicher Unterstützung von DeltaTree (https://deltatree.de/).
